// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Span snapshot antialiased 1`] = `
<span
  class="antialiased"
>
  antialiased
</span>
`;

exports[`Span snapshot block 1`] = `
<div
  class="block"
>
  block
</div>
`;

exports[`Span snapshot color error 1`] = `
<span
  class="text-dark-error"
>
  error
</span>
`;

exports[`Span snapshot color palette color 1`] = `
<span
  class="text-purple-100"
>
  purple-100
</span>
`;

exports[`Span snapshot color prop collision 1`] = `
<span
  class="text-dark-error"
>
  should warn and use 'error' class
</span>
`;

exports[`Span snapshot color success 1`] = `
<span
  class="text-dark-success"
>
  success
</span>
`;

exports[`Span snapshot color warning 1`] = `
<span
  class="text-dark-warning"
>
  warning
</span>
`;

exports[`Span snapshot derive contrast AA 1`] = `
<span
  class="text-dark-aa"
>
  AA
</span>
`;

exports[`Span snapshot derive contrast muted 1`] = `
<span
  class="text-dark-aaa"
>
  AAA
</span>
`;

exports[`Span snapshot derive contrast xmuted 1`] = `
<span
  class="text-dark-aa"
>
  AA
</span>
`;

exports[`Span snapshot derive contrast xxmuted 1`] = `
<span
  class="text-dark-a"
>
  A
</span>
`;

exports[`Span snapshot semibold 1`] = `
<span
  class="font-semibold"
>
  semibold
</span>
`;

exports[`Span snapshot size 2xl 1`] = `
<span
  class="text-2xl"
>
  2xl
</span>
`;

exports[`Span snapshot size 2xs 1`] = `
<span
  class="text-2xs"
>
  2xs
</span>
`;

exports[`Span snapshot size lg 1`] = `
<span
  class="text-lg"
>
  lg
</span>
`;

exports[`Span snapshot size sm 1`] = `
<span
  class="text-sm"
>
  sm
</span>
`;

exports[`Span snapshot size xl 1`] = `
<span
  class="text-xl"
>
  xl
</span>
`;

exports[`Span snapshot strong 1`] = `
<span
  class="font-bold"
>
  strong
</span>
`;

exports[`Span snapshot tag 1`] = `
<div
  class=""
>
  div tag
</div>
`;

exports[`Span snapshot uppercase 1`] = `
<span
  class="uppercase"
>
  uppercase
</span>
`;
